<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">User-Auth App</string>
    <string name="user_auth">User-Auth App</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam metus odio, commodo id metus in, pellentesque posuere erat.</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account_sign_up">Don’t have an account?‎‎‏‏‎ ‎</string>
    <string name="sign_up">Sign up now</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome_onboard">Welcome Onboard</string>
    <string name="register">Register</string>
    <string name="let_s_make_one_for_you">Lets create one for you</string>
    <string name="already_have_an_account">Already have an account?‎‎‏‏‎ ‎</string>
    <string name="fullname">Fullname</string>
    <string name="repeat_password">Repeat password</string>
    <string name="phone_number">Phone number</string>
    <string name="reset_password">Send Reset Instructions</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="we_get_it_stuff_happens">We get it, stuff happens. Just enter your email address below and we will send you a link to reset your password.</string>
    <string name="what_is_your_main_focus_today">What is your main focus today?</string>
    <string name="to_do_list">To-do list</string>
    <string name="write_your_main_focus">your main focus</string>
    <string name="john_doe">John Doe</string>
    <string name="email_address">Email address</string>
    <string name="phone_number_card">Phone number</string>
    <string name="remember_me">Remember me</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="for_security_reason">For security reasons, we do NOT store your password. So rest assured that we will never send your password via email.</string>
    <string name="sign_in_to_to_do_app" tools:ignore="Typos">Sign in to user-auth app</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="or">Or</string>
    <string name="sign_in_with_phone_number">Sign in with phone number</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="enter_the_phone_number_that_you_registered_earlier">Enter your phone number below and we will send you OTP code.</string>
    <string name="phone_number_2">Phone Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_the_otp_that_has_been_sent_to_your_phone_number">Enter the OTP that has been sent to your phone number.</string>
    <string name="submit">Submit</string>
    <string name="did_not_receive_the_otp">Did not receive the OTP?‎‎‏‏‎ ‎</string>
    <string name="resend_otp">Resend OTP</string>
</resources>