<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_main_background"
    tools:context=".SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:paddingHorizontal="26dp"
        android:paddingVertical="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans_semibold"
            android:text="@string/welcome_back"
            android:textColor="@color/secondary_text"
            android:textSize="28sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:fontFamily="@font/nunito_sans_semibold"
            android:text="@string/sign_in_to_to_do_app"
            android:textColor="@color/secondary_text"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_sign_in_google"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary_color"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="@string/sign_in_with_google"
                android:textAllCaps="false"
                app:icon="@drawable/ic_google" />

            <Button
                android:id="@+id/btn_sign_in_phone_number"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/text_and_icons"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="@string/sign_in_with_phone_number"
                android:textAllCaps="false"
                app:icon="@drawable/ic_local_phone" />

        </LinearLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:columnCount="3"
            android:orientation="horizontal"
            android:rowCount="1">

            <View
                android:layout_width="157dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:background="@color/secondary_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans_semibold"
                android:gravity="center_horizontal"
                android:paddingHorizontal="14dp"
                android:text="@string/or"
                android:textSize="16sp" />

            <View
                android:layout_width="157dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:background="@color/secondary_text" />

        </GridLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:hint="@string/email_address"
            app:errorEnabled="false"
            app:errorIconDrawable="@null"
            app:helperTextTextColor="@color/design_default_color_error">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/custom_email_icon"
                android:drawablePadding="8dp"
                android:fontFamily="@font/nunito_sans_semibold"
                android:inputType="textEmailAddress"
                android:textColor="@color/secondary_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:errorEnabled="false"
            app:errorIconDrawable="@null"
            app:helperTextTextColor="#F40F0F">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/custom_lock_icon"
                android:drawablePadding="8dp"
                android:fontFamily="@font/nunito_sans_semibold"
                android:inputType="textPassword"
                android:textColor="@color/secondary_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:columnCount="2"
            android:orientation="horizontal"
            android:rowCount="1">

            <CheckBox
                android:id="@+id/remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="-6dp"
                android:fontFamily="@font/nunito_sans_semibold"
                android:text="@string/remember_me"
                android:textColor="@color/dark_color"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:fontFamily="@font/nunito_sans_semibold"
                android:text="@string/forgot_password"
                android:textColor="@color/dark_color"
                android:textSize="16sp" />

        </GridLayout>

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/primary_color"
            android:elevation="4dp"
            android:fontFamily="@font/nunito_sans_bold"
            android:text="@string/sign_in"
            android:textAllCaps="false" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans_semibold"
                android:gravity="center"
                android:text="@string/don_t_have_an_account_sign_up"
                android:textColor="@color/secondary_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans_semibold"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textColor="@color/dark_color"
                android:textSize="16sp" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_marginTop="-314dp"
            android:visibility="invisible" />

    </LinearLayout>

</ScrollView>