<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_main_background"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingHorizontal="26dp"
    android:paddingVertical="20dp"
    tools:context=".ForgotPasswordActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:fontFamily="@font/nunito_sans_semibold"
        android:text="@string/forgot_your_password"
        android:textColor="@color/secondary_text"
        android:textSize="28sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/nunito_sans_semibold"
        android:text="@string/we_get_it_stuff_happens"
        android:textColor="@color/secondary_text"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:fontFamily="@font/nunito_sans_semibold"
        android:text="@string/for_security_reason"
        android:textColor="@color/secondary_text"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/email_address"
        app:errorEnabled="false"
        app:errorIconDrawable="@null"
        app:helperTextTextColor="#F40F0F">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/custom_email_icon"
            android:drawablePadding="8dp"
            android:fontFamily="@font/nunito_sans_semibold"
            android:inputType="textEmailAddress"
            android:textColor="@color/secondary_text" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary_color"
        android:elevation="4dp"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/reset_password"
        android:textAllCaps="false" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_marginTop="-314dp"
        android:visibility="invisible" />

</LinearLayout>