<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_main_background"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingHorizontal="26dp"
    android:paddingVertical="20dp"
    tools:context=".PhoneNumberActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_sans_semibold"
        android:text="@string/sign_in_with"
        android:textColor="@color/secondary_text"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:fontFamily="@font/nunito_sans_semibold"
        android:text="@string/phone_number_2"
        android:textColor="@color/secondary_text"
        android:textSize="28sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:fontFamily="@font/nunito_sans_semibold"
        android:text="@string/enter_the_phone_number_that_you_registered_earlier"
        android:textColor="@color/secondary_text"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPhone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/phone_number"
        app:errorEnabled="false"
        app:errorIconDrawable="@null"
        app:helperTextTextColor="#F40F0F">

        <com.santalu.maskara.widget.MaskEditText
            android:id="@+id/metPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/custom_local_phone_icon"
            android:drawablePadding="8dp"
            android:fontFamily="@font/nunito_sans_semibold"
            android:inputType="number"
            android:maxLength="20"
            android:textColor="@color/secondary_text"
            app:mask="+62 (___) ___ __ ___" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_send_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary_color"
        android:elevation="4dp"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/send_otp"
        android:textAllCaps="false" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_marginTop="-250dp"
        android:visibility="invisible" />

</LinearLayout>