<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_dashboard"
    tools:context=".ProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="#0000BCD4"
        android:minHeight="?attr/actionBarSize"
        app:title="Profile"
        app:titleTextColor="@color/text_and_icons"
        android:theme="@style/Theme.UserAuthApp"/>

    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:paddingHorizontal="26dp"
        android:layout_marginTop="132dp"
        android:layout_marginBottom="67dp"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="118dp"
            android:layout_height="118dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_undraw_male_avatar_323b"
            android:layout_marginBottom="16dp"
            app:civ_border_width="3dp"
            app:civ_border_color="@color/dark_color"/>

        <TextView
            android:id="@+id/fullname_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_image"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            tools:text="@string/john_doe"
            android:textColor="@color/text_and_icons"
            android:textSize="28sp"
            android:fontFamily="@font/nunito_sans_bold"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/email_card"
        android:layout_width="match_parent"
        android:background="@drawable/solid_shape"
        android:layout_marginHorizontal="26dp"
        android:layout_marginBottom="28dp"
        android:elevation="5dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_layout"
        android:orientation="vertical">

        <LinearLayout
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_address"
                android:textColor="@color/secondary_text"
                android:textSize="12sp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/nunito_sans_bold"/>

            <TextView
                android:id="@+id/email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Johndoe@gmail.com"
                android:textColor="@color/secondary_text"
                android:textSize="16sp"
                android:paddingHorizontal="18dp"
                android:fontFamily="@font/nunito_sans_semibold"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/phone_card"
        android:layout_width="match_parent"
        android:background="@drawable/solid_shape"
        android:layout_marginHorizontal="26dp"
        android:elevation="5dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_card"
        android:orientation="vertical">

        <LinearLayout
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_number_card"
                android:textColor="@color/secondary_text"
                android:textSize="12sp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/nunito_sans_bold"/>

            <TextView
                android:id="@+id/phone_number_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="+6282290380510"
                android:textColor="@color/secondary_text"
                android:textSize="16sp"
                android:paddingHorizontal="18dp"
                android:fontFamily="@font/nunito_sans_semibold"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>